Added functionality to add all files at once and to exclude .class files
i